// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders null on error 1`] = `null`;

exports[`<Header /> renders null on loading 1`] = `null`;

exports[`<Header /> renders null on undefined data 1`] = `null`;

exports[`<Header /> should render correctly 1`] = `
.emotion-12 {
  background-color: rgb(216,234,204);
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
  padding-top: 4rem;
  padding-bottom: 4rem;
}

@media screen and (min-width:40em) {
  .emotion-12 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

@media screen and (min-width:40em) {
  .emotion-12 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-weight: 300;
  font-size: 3rem;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 4rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 5rem;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 2.25rem;
  -webkit-letter-spacing: -0.03125rem;
  -moz-letter-spacing: -0.03125rem;
  -ms-letter-spacing: -0.03125rem;
  letter-spacing: -0.03125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 2.875rem;
  }
}

.emotion-4 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1.25rem;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 1rem;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-4 {
    font-size: 1.75rem;
  }
}

.emotion-10 {
  grid-column: center-start/center-end;
}

.emotion-8 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin-right: 0.5rem;
  margin-bottom: 0.5rem;
  word-break: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.15s linear;
  transition: all 0.15s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-shadow: inset 0 0 0 0.0625rem rgba(36,28,21,0.4);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.emotion-8:visited:hover,
.emotion-8:hover,
.emotion-8:focus {
  color: inherit;
}

.emotion-8:visited {
  color: inherit;
}

.emotion-8:hover,
.emotion-8:focus {
  color: rgb(64,59,59);
  box-shadow: inset 0 0 0 0.0625rem rgb(216,234,204);
  background-color: rgb(216,234,204);
}

<header
  class="emotion-12 emotion-11"
>
  <h1
    class="emotion-0 emotion-1"
    data-testid="name"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-2 emotion-1"
    data-testid="role"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-4 emotion-1"
    data-testid="update"
  >
    Hire Me
  </h3>
  <h4
    class="emotion-4 emotion-1"
    data-testid="available"
  >
    Available from 
    April 2020
  </h4>
  <div
    class="emotion-10 emotion-11"
    data-testid="links"
  >
    <a
      class="emotion-8 emotion-1"
      data-testid="link"
      href="/link"
      rel="noopener noreferrer"
      target="_blank"
    >
      Github
    </a>
  </div>
</header>
`;

exports[`<Header /> should render when \`available\` is \`null\` 1`] = `
.emotion-10 {
  background-color: rgb(216,234,204);
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
  padding-top: 4rem;
  padding-bottom: 4rem;
}

@media screen and (min-width:40em) {
  .emotion-10 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

@media screen and (min-width:40em) {
  .emotion-10 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-weight: 300;
  font-size: 3rem;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 4rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 5rem;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 2.25rem;
  -webkit-letter-spacing: -0.03125rem;
  -moz-letter-spacing: -0.03125rem;
  -ms-letter-spacing: -0.03125rem;
  letter-spacing: -0.03125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 2.875rem;
  }
}

.emotion-4 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1.25rem;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 1rem;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-4 {
    font-size: 1.75rem;
  }
}

.emotion-8 {
  grid-column: center-start/center-end;
}

.emotion-6 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin-right: 0.5rem;
  margin-bottom: 0.5rem;
  word-break: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.15s linear;
  transition: all 0.15s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-shadow: inset 0 0 0 0.0625rem rgba(36,28,21,0.4);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.emotion-6:visited:hover,
.emotion-6:hover,
.emotion-6:focus {
  color: inherit;
}

.emotion-6:visited {
  color: inherit;
}

.emotion-6:hover,
.emotion-6:focus {
  color: rgb(64,59,59);
  box-shadow: inset 0 0 0 0.0625rem rgb(216,234,204);
  background-color: rgb(216,234,204);
}

<header
  class="emotion-10 emotion-9"
>
  <h1
    class="emotion-0 emotion-1"
    data-testid="name"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-2 emotion-1"
    data-testid="role"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-4 emotion-1"
    data-testid="update"
  >
    Hire Me
  </h3>
  <div
    class="emotion-8 emotion-9"
    data-testid="links"
  >
    <a
      class="emotion-6 emotion-1"
      data-testid="link"
      href="/link"
      rel="noopener noreferrer"
      target="_blank"
    >
      Github
    </a>
  </div>
</header>
`;

exports[`<Header /> should render when \`links\` is \`null\` 1`] = `
.emotion-8 {
  background-color: rgb(216,234,204);
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
  padding-top: 4rem;
  padding-bottom: 4rem;
}

@media screen and (min-width:40em) {
  .emotion-8 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

@media screen and (min-width:40em) {
  .emotion-8 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-weight: 300;
  font-size: 3rem;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 4rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 5rem;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 2.25rem;
  -webkit-letter-spacing: -0.03125rem;
  -moz-letter-spacing: -0.03125rem;
  -ms-letter-spacing: -0.03125rem;
  letter-spacing: -0.03125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 2.875rem;
  }
}

.emotion-4 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1.25rem;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 1rem;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-4 {
    font-size: 1.75rem;
  }
}

<header
  class="emotion-8 emotion-9"
>
  <h1
    class="emotion-0 emotion-1"
    data-testid="name"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-2 emotion-1"
    data-testid="role"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-4 emotion-1"
    data-testid="update"
  >
    Hire Me
  </h3>
  <h4
    class="emotion-4 emotion-1"
    data-testid="available"
  >
    Available from 
    April 2020
  </h4>
</header>
`;

exports[`<Header /> should render when \`name\` is \`null\` 1`] = `
.emotion-10 {
  background-color: rgb(216,234,204);
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
  padding-top: 4rem;
  padding-bottom: 4rem;
}

@media screen and (min-width:40em) {
  .emotion-10 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

@media screen and (min-width:40em) {
  .emotion-10 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

.emotion-0 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 2.25rem;
  -webkit-letter-spacing: -0.03125rem;
  -moz-letter-spacing: -0.03125rem;
  -ms-letter-spacing: -0.03125rem;
  letter-spacing: -0.03125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 2.875rem;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1.25rem;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 1rem;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 1.75rem;
  }
}

.emotion-8 {
  grid-column: center-start/center-end;
}

.emotion-6 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin-right: 0.5rem;
  margin-bottom: 0.5rem;
  word-break: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.15s linear;
  transition: all 0.15s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-shadow: inset 0 0 0 0.0625rem rgba(36,28,21,0.4);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.emotion-6:visited:hover,
.emotion-6:hover,
.emotion-6:focus {
  color: inherit;
}

.emotion-6:visited {
  color: inherit;
}

.emotion-6:hover,
.emotion-6:focus {
  color: rgb(64,59,59);
  box-shadow: inset 0 0 0 0.0625rem rgb(216,234,204);
  background-color: rgb(216,234,204);
}

<header
  class="emotion-10 emotion-9"
>
  <h2
    class="emotion-0 emotion-1"
    data-testid="role"
  >
    Senior Front-End Engineer
  </h2>
  <h3
    class="emotion-2 emotion-1"
    data-testid="update"
  >
    Hire Me
  </h3>
  <h4
    class="emotion-2 emotion-1"
    data-testid="available"
  >
    Available from 
    April 2020
  </h4>
  <div
    class="emotion-8 emotion-9"
    data-testid="links"
  >
    <a
      class="emotion-6 emotion-1"
      data-testid="link"
      href="/link"
      rel="noopener noreferrer"
      target="_blank"
    >
      Github
    </a>
  </div>
</header>
`;

exports[`<Header /> should render when \`role\` is \`null\` 1`] = `
.emotion-10 {
  background-color: rgb(216,234,204);
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
  padding-top: 4rem;
  padding-bottom: 4rem;
}

@media screen and (min-width:40em) {
  .emotion-10 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

@media screen and (min-width:40em) {
  .emotion-10 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-weight: 300;
  font-size: 3rem;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 4rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 5rem;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1.25rem;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 1rem;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 1.75rem;
  }
}

.emotion-8 {
  grid-column: center-start/center-end;
}

.emotion-6 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin-right: 0.5rem;
  margin-bottom: 0.5rem;
  word-break: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.15s linear;
  transition: all 0.15s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-shadow: inset 0 0 0 0.0625rem rgba(36,28,21,0.4);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.emotion-6:visited:hover,
.emotion-6:hover,
.emotion-6:focus {
  color: inherit;
}

.emotion-6:visited {
  color: inherit;
}

.emotion-6:hover,
.emotion-6:focus {
  color: rgb(64,59,59);
  box-shadow: inset 0 0 0 0.0625rem rgb(216,234,204);
  background-color: rgb(216,234,204);
}

<header
  class="emotion-10 emotion-9"
>
  <h1
    class="emotion-0 emotion-1"
    data-testid="name"
  >
    Andy Kenward
  </h1>
  <h3
    class="emotion-2 emotion-1"
    data-testid="update"
  >
    Hire Me
  </h3>
  <h4
    class="emotion-2 emotion-1"
    data-testid="available"
  >
    Available from 
    April 2020
  </h4>
  <div
    class="emotion-8 emotion-9"
    data-testid="links"
  >
    <a
      class="emotion-6 emotion-1"
      data-testid="link"
      href="/link"
      rel="noopener noreferrer"
      target="_blank"
    >
      Github
    </a>
  </div>
</header>
`;

exports[`<Header /> should render when \`update\` is \`null\` 1`] = `
.emotion-10 {
  background-color: rgb(216,234,204);
  display: grid;
  grid-template-columns: 32px [center-start] 1fr [center-end] 32px;
  padding-top: 4rem;
  padding-bottom: 4rem;
}

@media screen and (min-width:40em) {
  .emotion-10 {
    grid-template-columns: minmax(32px,15%) [center-start] 1fr [center-end] minmax(32px,15%);
  }
}

@media screen and (min-width:40em) {
  .emotion-10 {
    padding-top: 8rem;
    padding-bottom: 8rem;
  }
}

.emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-weight: 300;
  font-size: 3rem;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 4rem;
  }
}

@media screen and (min-width:52em) {
  .emotion-0 {
    font-size: 5rem;
  }
}

.emotion-2 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 2.25rem;
  -webkit-letter-spacing: -0.03125rem;
  -moz-letter-spacing: -0.03125rem;
  -ms-letter-spacing: -0.03125rem;
  letter-spacing: -0.03125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 0.5rem;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-2 {
    font-size: 2.875rem;
  }
}

.emotion-4 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1.25rem;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  margin-bottom: 1rem;
  grid-column: center-start/center-end;
  word-break: break-word;
}

@media screen and (min-width:40em) {
  .emotion-4 {
    font-size: 1.75rem;
  }
}

.emotion-8 {
  grid-column: center-start/center-end;
}

.emotion-6 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin-right: 0.5rem;
  margin-bottom: 0.5rem;
  word-break: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.15s linear;
  transition: all 0.15s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-shadow: inset 0 0 0 0.0625rem rgba(36,28,21,0.4);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.emotion-6:visited:hover,
.emotion-6:hover,
.emotion-6:focus {
  color: inherit;
}

.emotion-6:visited {
  color: inherit;
}

.emotion-6:hover,
.emotion-6:focus {
  color: rgb(64,59,59);
  box-shadow: inset 0 0 0 0.0625rem rgb(216,234,204);
  background-color: rgb(216,234,204);
}

<header
  class="emotion-10 emotion-9"
>
  <h1
    class="emotion-0 emotion-1"
    data-testid="name"
  >
    Andy Kenward
  </h1>
  <h2
    class="emotion-2 emotion-1"
    data-testid="role"
  >
    Senior Front-End Engineer
  </h2>
  <h4
    class="emotion-4 emotion-1"
    data-testid="available"
  >
    Available from 
    April 2020
  </h4>
  <div
    class="emotion-8 emotion-9"
    data-testid="links"
  >
    <a
      class="emotion-6 emotion-1"
      data-testid="link"
      href="/link"
      rel="noopener noreferrer"
      target="_blank"
    >
      Github
    </a>
  </div>
</header>
`;
